--- a/client/src/main.css
+++ b/client/src/main.css
@@ -58,11 +58,7 @@
 }
 
 .data-empty-message {
-  text-align: center;
-  font-size: var(--first-size);
-  padding: 30px;
-  position: absolute;
-  left: 50%;
+  font-size: var(--first-size) !important;
 }
 
 /* FORM LOGIN-REGISTER */
@@ -71,39 +67,6 @@
   gap: 1rem;
   width: 100%;
   max-width: 500px;
-}
-
-.form-login-register .input-conatiner {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  gap: 0.5rem;
-}
-
-.form-login-register .input[type="email"],
-.form-login-register .input[type="password"],
-.form-login-register .input[type="text"],
-.form-login-register .input[type="number"] {
-  padding: 1rem 0.75rem;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  gap: 0.5rem;
-  background-color: transparent;
-  border-bottom: 2px solid var(--first-color);
-}
-
-.form-login-register .input[type="email"]:focus,
-.form-login-register .input[type="password"]:focus,
-.form-login-register .input[type="text"]:focus,
-.form-login-register .input[type="number"]:focus {
-  border: 2px solid var(--first-color);
-  border-radius: 0.5rem;
-}
-
-.form-login-register .error-message-inp {
-  color: red;
-  font-size: var(--third);
 }
 
 .form-login-register .span {
@@ -138,6 +101,20 @@
   font-size: var(--second-size);
   color: var(--text-color-two);
   padding: 10px 0;
+}
+
+.table-one tbody tr th:nth-child(3) select {
+  background: var(--btn-bg);
+  padding: 5px 2px;
+  color: var(--text-color-one);
+  border-radius: 3rem;
+  cursor: pointer;
+}
+
+.table-one tbody tr th:nth-child(3) select option {
+  background: var(--first-color);
+  color: var(--text-color-one);
+  cursor: pointer;
 }
 
 @media (min-width: 1000px) {
