--- a/client/src/pages/DeleteDataPage/index.css
+++ b/client/src/pages/DeleteDataPage/index.css
@@ -1,3 +1,11 @@
 .delete-data-page {
   padding: 2rem 20px;
 }
+
+.delete-col > button {
+  background: none;
+  padding: 5px 10px;
+  font-size: var(--second-size);
+  color: var(--first-color);
+  cursor: pointer;
+}
